[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "OpenMSTools"
version = "0.1.0"
description = "A re-packaging of OpenMS based on the pyOpenMS library..."
authors = ["David Niteas <david.ql.d@foxmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "OpenMSTools" }
]

[tool.poetry.dependencies]
python = ">=3.10"
pyopenms = "*"
numpy = "*"
pandas = "*"
dask = "*"
trio = "*"
rich = "*"