[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "MetaMSTools"
version = "0.1.0"
description = "面向代谢组学的质谱数据分析工具包"
authors = ["David Niteas <david.ql.d@foxmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "MetaMSTools" }
]

[tool.poetry.dependencies]
python = ">=3.10"
pyopenms = "*"
numpy = "*"
pandas = "*"
dask = "*"
pydantic = "*"
toml = "*"
rtree = "*"

[tool.ruff]
line-length = 120
src = ["MetaMSTools"]
select = [
  "E",   # PEP8
  "W",   # PEP8
  "I",   # 导入顺序
  "F",   # 基础检查
  "UP",  # 新版本兼容性
  "PERF",  # 性能优化
]
ignore = ["E741"]